[package]
name = "commander-ws-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "ab406c1d6dba55965dfc614d78e77f142f892878", default-features = false, features = ["builder"]  }
