[package]
name = "commander-ws-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "b5314fefbe45fdc5e736400be23513d460b10559", default-features = false, features = ["builder"]  }
